# latest_ai_development

./: Dockerfile  pyproject.toml  requirements.txt
src/latest_ai_development/: api.py  crew.py  ingestion.py  main.py  vectorstore.py
src/latest_ai_development/config/: agents.yaml  tasks.yaml
vector_db/: chroma.sqlite3
